bugs fixed and any methods added
